@@ -1,6 +1,6 @@
 {
   "name": "automata",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "main": "automata",
   "keywords": [
     "FSM",
