@@ -11,7 +11,7 @@ function require() {
     return module.exports;
 }
 </script>
-<script src="test3.js"></script>
+<script src="test1.js"></script>
 
 <!--
 <script src="test1.js"></script>
